# prikazy

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Makefile  README.md  TESTING.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: docker-icloud-sync.mdc
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_users_and_api_tokens.py  0002_users_and_tenants.py  0003_relations_section_access.py  0004_ai_query_logs.py  0005_document_created_by_user.py
app/: __init__.py  main.py
app/api/: access.py  dependencies.py  document_urls.py  http_utils.py
app/auth/: password.py  service.py
app/core/: config.py  document_sections.py  errors.py  logging.py  section_permissions.py
app/db/: partitions.py  session.py
app/middleware/: security.py
docker/: Dockerfile
scripts/: api-session.sh  bootstrap-local.sh  create_api_token.py  deploy-on-server.sh  docker-sync.sh  local-dev-down.sh  local-dev-up.sh  publish-github.sh  reprocess_documents.py  role-test.sh  seed_users.py  setup-project.sh  setup-yandex-llm.sh  smoke-test-server.sh
specs/: ocr-document-platform.md  prikazy.md
templates/: base_admin.html  base_portal.html  error.html  login.html
tests/: conftest.py  test_ai_access.py  test_ai_document_access.py  test_ai_query.py  test_ai_usage.py  test_api_security.py  test_auth.py  test_document_delete.py  test_document_extractor.py  test_document_file.py  test_document_sections.py  test_document_text_excerpt.py  test_document_urls.py  test_error_pages.py  test_file_validation.py  test_http_utils.py  test_job_service.py  test_ocr_providers.py  test_ocr_result_persistence.py  test_partitions.py  test_search.py  test_section_permissions.py  test_sections_api.py  test_security_headers.py  test_upload_flow.py  test_user_service.py
(+85 files in other folders)
